--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "babel": {
     "presets": [
-      "latest"
+      "latest",
+      "react"
     ]
   },
   "eslintConfig": {
@@ -21,11 +22,16 @@
     ]
   },
   "dependencies": {
-    "babel-polyfill": "^6.20.0"
+    "babel-polyfill": "^6.20.0",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "react-redux": "^5.0.1",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "babel-loader": "^6.2.10",
     "babel-preset-latest": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
     "del": "^2.2.2",
     "eslint": "^3.12.2",
     "eslint-config-airbnb": "^13.0.0",
