--- a/package.json
+++ b/package.json
@@ -21,12 +21,26 @@
       "import"
     ]
   },
+  "rules": {
+    "new-cap": [
+      2,
+      {
+        "capIsNewExceptions": [
+          "Map",
+          "List"
+        ]
+      }
+    ]
+  },
   "dependencies": {
     "babel-polyfill": "^6.20.0",
+    "immutable": "^3.8.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-actions": "^1.2.0",
+    "redux-immutable": "^3.0.9"
   },
   "devDependencies": {
     "babel-loader": "^6.2.10",
